# Vietnamese-Question-Answering-System

./: Inference.ipynb  README.md  vn-qa-bartpho-syllable-base.ipynb  vn-qa-bartpho-syllable.ipynb  vn-qa-bartpho-word-base.ipynb  vn-qa-bartpho-word.ipynb
VQA_Web/: README.md  pyproject.toml
VQA_Web/client/: index.html  scripts.js  style.css
VQA_Web/vqa_web/: main.py  model.py  request_python.py
